--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@grpc/grpc-js": "^1.3.0",
     "@grpc/proto-loader": "^0.6.1",
     "bulma": "^0.9.3",
+    "downsample": "^1.4.0",
     "electron-log": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "hacktimer": "^1.1.3",
