remove unnecessary files

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "css-loader": "^4.2.1",
+    "cz-conventional-changelog": "^3.3.0",
     "electron": "12.0.6",
     "fork-ts-checker-webpack-plugin": "^5.0.14",
     "node-loader": "^1.0.1",
@@ -102,33 +103,5 @@
     "styled-components": "^5.3.0",
     "vega": "^5.21.0",
     "vega-lite": "^5.1.1"
-  },
-  "release": {
-    "branches": [
-      "main"
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      [
-        "@semantic-release/github",
-        {
-          "assets": [
-            {
-              "path": "out/make/squirrel.windows/x64/RELEASES",
-              "label": "RELEASES"
-            },
-            {
-              "path": "out/make/squirrel.windows/x64/omnivisualizer-*-full.nupkg",
-              "label": "omnivisualizer.nupkg"
-            },
-            {
-              "path": "out/make/squirrel.windows/x64/omnivisualizer-*Setup.exe",
-              "label": "omnivisualizer-setup.exe"
-            }
-          ]
-        }
-      ]
-    ]
   }
 }
